feat: add guided onboarding and recommendation-ranked browse parity
- add a first-run onboarding flow using typed onboarding context and profile-screen guidance
- surface onboarding banner, checklist, CTA, and login/back/cancel routing in the JavaFX profile flow
- add onboarding regression coverage across LoginViewModel, LoginController, ProfileViewModel, ProfileController, and end-to-end onboarding flow tests
- introduce deterministic browse ranking via BrowseRankingService and DefaultBrowseRankingService
- apply recommendation-ranked browse ordering in MatchingUseCases and wire it through production and REST test composition roots
- align REST /api/users/{id}/candidates with the canonical browse use-case while preserving its array response shape
- add REST parity and browse-ranking regression tests, including location-missing and ordering scenarios
- refactor LocationSelectionDialog into testable binding helpers and add JavaFX selection regression coverage
- add a top-level CLI main smoke test for logged-out startup and explicit zero-exit shutdown
- add implementation plan docs for cleanup, onboarding, ranked browse, REST browse parity, CLI smoke testing, and PostgreSQL migration